# chromamind

./: .gitignore  .releaserc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/setup-rust/: action.yaml
.github/workflows/: clippy.yml  lint.yml  pages.yml  release.yml  test.yml
docs/: index.html  site.webmanifest
scripts/: bump-version.cjs
src/: 404.tsx  App.css  App.spec.tsx  App.tsx  MainPage.spec.tsx  MainPage.tsx  main.tsx  reducer.ts  store.ts  theme.spec.ts  theme.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  label.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  structs.rs
src/components/: Collections.spec.tsx  Collections.tsx  Home.spec.tsx  Home.tsx  Layout.spec.tsx  Layout.tsx  Preview.tsx  Settings.spec.tsx  Settings.theme.spec.tsx  Settings.tsx
src/components/collection_components/: collectionDialog.tsx  createCollectionDialog.tsx  display.tsx  guidePopup.tsx  index.ts
src/components/ui/: accordion.tsx  action-bar.tsx  alert.tsx  avatar.tsx  button.tsx  clipboard.tsx  close-button.tsx  data-list.tsx  dialog.tsx  drawer.tsx  empty-state.tsx  file-button.tsx  input-group.tsx  menu.tsx  number-input.tsx  pagination.tsx  password-input.tsx  popover.tsx  progress.tsx  provider.tsx  select.tsx  skeleton.tsx  slider.tsx  stat.tsx  stepper-input.tsx  toaster.tsx  toggle-tip.tsx
src/slices/: currentCollectionSlice.ts  currentMenuSlice.ts
src/styles/: collection.css  home.css  layout.css
src/tests/: setup.ts
src/utils/: cn.ts  copyToClipboard.ts  embeddingToString.ts  invokeTauri.ts  renderWithProvider.tsx
