[package]
name = "chromamind"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chromamind_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
testcontainers = { version = "0.22.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["test"] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chromadb = { git = "https://github.com/probaku1234/chromadb-rs", branch = "my-imple" }
tauri-plugin-log = "2"
log = "0.4.22"
chrono = "0.4.38"
open = "5.3.1"
os_info = "3.9.0"
urlencoding = "2.1.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
rand = "0.8.5"
testcontainers = { version = "0.23.1", features = ['http_wait', 'blocking'] }
